--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node --watch app.js",
+    "start": "node --watch src/app.js",    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.10.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
